--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,48 +1,36 @@
-
-<h1>HOME PAGE</h1>
-<!--<%- include("../partials/header") %>-->
-<!--<div class="container">-->
-<!--	<header class="jumbotron">-->
-<!--		<div class="container">-->
-<!--		<h1>-->
-<!--			Welcome to DoubleC Delivery-->
-<!--		</h1>-->
-<!--		<p>-->
-<!--			Yummy food to your door-->
-<!--		</p>-->
-<!--		<h3>-->
-<!--		<a class="btn btn-primary btn-large" href="restaurants/new">-->
-<!--			Add New</a>-->
-<!--		</h3>-->
-<!--		</div>-->
-<!--	</header>-->
+{{> partials/header.hbs}}
+<!--//for each restaurant, create a thumbnail to show name, pic, button to direct for details-->
+<div class="container">
+    <header class="jumbotron">
+        <div class="container">
+            <h1>
+                Welcome to DoubleC Delivery
+            </h1>
+            <p>
+                Yummy food to your door
+            </p>
+        </div>
+    </header>
 
 
+    <div class="row d-flex flex-wrap">
+        {{#each restaurants}}
+            <div class="col-md-3 col-sm-6">
+                <div class="card">
+                    <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.name}}</h5>
+                        <a href="/restaurants/{{this.id}}" class="btn btn-success btn-sm">
+                            Go to Menu
+                        </a>
+                    </div>
+                </div>
 
-<!--	<div class="row d-flex flex-wrap" >-->
-<!--		<% campgrounds.forEach(function(campground){ %>-->
-<!--		<div class="col-md-3 col-sm-6">-->
-<!--			<div class="card" >-->
-<!--				<img class="card-img-top" src="<%= campground["image"] %>" alt="Card image cap">-->
-<!--				<div class="card-body">-->
-<!--					<h5 class="card-title"><%=campground["name"]%></h5>-->
-<!--					<p><%=campground.author.username%></p>-->
-<!--					<p><%-campground["description"].substring(0, 20)%> ...</p>-->
-<!--					<a class="btn btn-danger btn-sm">-->
-<!--						Like-->
-<!--					</a>-->
-<!--					<a href="/campgrounds/<%= campground["_id"]%>" class="btn btn-success btn-sm">-->
-<!--						More Info-->
-<!--					</a>-->
-<!--				</div>				-->
-<!--			</div>-->
-<!--			-->
-<!--		</div>-->
+            </div>
+        {{/each}}
 
-<!--		<% })%>-->
-<!--	-->
-<!--	</div>-->
-<!--</div>-->
+    </div>
+</div>
 
 
-<!--<%- include("../partials/footer") %>-->
+{{>partials/footer.hbs}}
