fix the file location

--- a/src/main/resources/templates/menu.hbs
+++ b/src/main/resources/templates/menu.hbs
@@ -2,6 +2,7 @@
 <!--//for each restaurant, create a thumbnail to show name, pic, button to direct for details-->
 <div class="container">
     <div class="row d-flex flex-wrap">
+        <div class="col-md-9">
         <div class="card">
             <img id="showImage" src="{{restaurant.image}}" class="rounded img-fluid campground">
             <div class="caption-full">
@@ -24,7 +25,7 @@
 
         </div>
     </div>
-
+    </div>
 </div>
 
 {{>partials/footer.hbs}}
