--- a/src/main/resources/templates/signin.hbs
+++ b/src/main/resources/templates/signin.hbs
@@ -73,7 +73,7 @@
             url: "/signin",
             data: {"email": email, "password": password},
             success: function (response) {
-                console.log(JSON.stringify(response))
+                console.log(response.)
                 $("#log").html("<strong>Welcome back! <a href=\"/\"> Go to Home Page</a> </strong>");
                 $("#email").val("");
                 $("#password").val("");
