--- a/src/main/resources/templates/partials/header.hbs
+++ b/src/main/resources/templates/partials/header.hbs
@@ -2,29 +2,27 @@
 <html lang="en">
 
 <head>
-    <title>DoubleC Delivery</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<title>DoubleC Delivery</title>
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/split-pane.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+  	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 
-    <script type="text/javascript" src="/js/jquery-1.12.3.min.js"></script>
-    <script type="text/javascript" src="/js/split-pane.js"></script>
-    <script type="text/javascript" src="/js/utility.js"></script>
-
+ 	<script type="text/javascript" src="/js/jquery-1.12.3.min.js"></script>
+ 	<script type="text/javascript" src="/js/bootstrap.js"></script>
+ 	<script type="text/javascript" src="/js/split-pane.js"></script>
+ 	<script type="text/javascript" src="/js/utility.js"></script>
+ 	
 </head>
 
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">DoubleC Delivery</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -34,28 +32,21 @@
             </li>
         </ul>
         <ul class="nav navbar-nav ml-auto">
-            {{#if username}}
-                <li>
-                    <a class="nav-link username" href="#">Hi, {{username}}<span
-                            class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/signout">Log Out<span class="sr-only"></span></a>
-                </li>
-                <li>
-                    <a class="nav-link btn" id="cart" type="button" data-toggle="modal"
-                       data-target="#shoppingCart"><i class="fas fa-cart-arrow-down"></i>
-                        My Cart</a>
-                </li>
-            {{else}}
-                <li class="nav-item">
-                    <a class="nav-link" href="/signin">Login <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/signup">SignUp <span class="sr-only"></span></a>
-                </li>
-
+            {{#if getSession}}
+            <li class="nav-item">
+                <a class="nav-link" href="/signin">Login <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/signup">SignUp <span class="sr-only"></span></a>
+            </li>
             {{/if}}
+<!--            <li>-->
+<!--                <a class="nav-link" href="#">Signed in as <%= currentUser.username %><span class="sr-only"></span></a>-->
+
+<!--            </li>-->
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link" href="/signout">Log Out<span class="sr-only"></span></a>-->
+<!--            </li>-->
         </ul>
     </div>
 </nav>
